<resources>
    <string name="app_name">Book Tracker Application</string>
    <string name="title">Book Library</string>
    <string name="action_settings">Settings</string>
    <string name="label_user_name">User Name</string>
    <string name="mainMenuText">Main Menu</string>
    <string name="addButtonText">Add a New Book Entry</string>
    <string name="listButtonText">List All Books</string>
    <string name="hint_book_required">Book Title (Required)</string>
    <string name="hint_author">Author</string>
    <string name="label_book">Book Title:</string>
    <string name="label_author">Author:</string>
    <string name="label_intention">Read or want to read? (Select One)</string>
    <string name="radio_button_read">Read</string>
    <string name="radio_button_wantto">Want to Read</string>
    <string name="button_save">Save</string>
    <string name="button_clear">Clear</string>
    <string name="label_Add_Book_Entry">Add Book Entry</string>
    <string name="label_view_book_entry">View Book Entry</string>
    <string name="label_type_view">Book Type</string>
    <string name="button_main_menu">Main Menu</string>
    <string name="title_activity_setting">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="headerTextView">Add Book Entry</string>
    <string name="button_delete">Delete</string>
    <string name="button_edit">Edit</string>
</resources>
