<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarAddBook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <TextView
        android:id="@+id/textViewHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/headerTextView"
        android:textSize="24sp" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="?android:attr/listDivider" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_book_required">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputBookTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textPersonName|textCapWords" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_author">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textPersonName|textCapWords" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textViewReadStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_intention" />

    <RadioGroup
        android:id="@+id/radioGroupReadStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButtonRead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Read"/>

        <RadioButton
            android:id="@+id/radioButtonWantToRead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Want to Read"/>
    </RadioGroup>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonClear"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/button_clear"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

        <Button
            android:id="@+id/buttonSave"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/button_save"
            android:textSize="16sp"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        <Button
            android:id="@+id/buttonMainMenu"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/button_main_menu"
            android:textSize="16sp"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    </LinearLayout>
</LinearLayout>
