<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/label_view_book_entry"
        android:textColor="@android:color/background_dark"
        android:textSize="50sp" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@android:color/black" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textLabelBook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:padding="4dp"
                android:text="@string/label_book"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewBook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:padding="4dp"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textLabelAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:padding="4dp"
                android:text="@string/label_author"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:padding="4dp"
                android:textSize="18sp" />
        </TableRow>

        <!-- Additional rows for other book details like 'Read Status' can be added here -->

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonMainMenu"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_dark"
                android:text="@string/button_main_menu"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/buttonDelete"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_dark"
                android:text="@string/button_delete"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/buttonEdit"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_dark"
                android:text="@string/button_edit"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck" />
        </TableRow>
    </TableLayout>
</LinearLayout>
